--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "React-scripts start",
+    "build": "React-scripts build",
+    "test": "React-scripts test",
+    "eject": "React-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "React-app",
+      "React-app/jest"
     ]
   },
   "browserslist": {
@@ -30,9 +31,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "Last 1 chrome version",
+      "Last 1 firefox version",
+      "Last 1 safari version"
     ]
   }
 }
