--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
+
+REACT_APP_API_URL = 'https://api.openweathermap.org/data/2.5'
 REACT_APP_API_KEY=0b116f6119f2ece693e78008220c9527
+REACT_APP_ICON_URL = 'https://openweathermap.org/img/w'
