--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-hook-form": "^7.27.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.0",
+    "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
